--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ footer-link-col: "#404040"
 # --- Misc --- #
 
 # Ruby Date Format to show dates of posts
-# date_format: "%B %-d, %Y"
+date_format: "%B %-d, %Y"
 
 # Facebook App ID
 #fb_app_id: ""
@@ -190,7 +190,7 @@ footer-link-col: "#404040"
 timezone: "America/Toronto"
 markdown: kramdown
 highlighter: rouge
-# permalink: /:year-:month-:day-:title/
+permalink: /:year-:month-:day-:title/
 paginate: 5
 
 kramdown:
